Refined oauth login plugins support